[project]
name = "parking-lot-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "notebook>=7.5.5",
    "pillow>=10.0",
    "pymilvus[model]>=2.5.6,<2.6",
    "sentence-transformers>=5.3.0",
    "setuptools<82",
    "torch>=2.10",
    "torchvision>=0.25",
    "ultralytics>=8.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
